<?xml version="1.0"?>
<package format="2">
  <name>godel_irb2400_support</name>
  <version>0.1.0</version>
  <description>
    Support package for a Godel system using ABB2400. Includes blending and calibration files.
  </description>

  <maintainer email="jmeyer@swri.org">Jonathan Meyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>godel_surface_detection</exec_depend>







  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>interactive_markers</build_depend>


  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>interactive_markers</exec_depend>

</package>
